src/test/deca/context/invalid/moduloIcompatible.deca
// Description:
//    Modulo
//
// Resultats:
//    Ligne 13: Les opérandes utilisées pour un calcul de modulo doivent être des entiers.
// 
// Historique:
//    cree le 13/01/2023

{
	int a = 1;
	float b = 0.5;
	a = a % b;
}
